--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==2.2.0
-numpy==1.26.3
-scikit-learn==1.4.0
-streamlit==1.31.0
-plotly==5.18.0
-python-dotenv==1.0.0 
+pandas
+numpy
+scikit-learn
+streamlit
+plotly
+python-dotenv
